WIP Binary file handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(PROJECT_SOURCES
         qxmlputget.h
         setEndianess.cpp
         setEndianess.h
+        setEndianess.ui
         setsize.cpp
         setsize.h
         setsize.ui
@@ -68,6 +69,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         SkinRessource.qrc
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        setEndianess.h
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET GUI_Builder APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
