added .ico  WIP skin save and skin loading

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,8 @@ project(GUI_Builder VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 set(CMAKE_VERBOSE_MAKEFILE ON)
 
 # Manually set FreeType paths if find_package fails
@@ -71,6 +69,7 @@ set(PROJECT_SOURCES
         Utility.cpp
         Utility.h
         widget.cpp
+        ressources.rc
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
